--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
@@ -118,4 +118,4 @@ existe uma chance de haver o dia desejado disponível</h3>
   
 </div>
 <br>
-<button (click)="saveDate()" class="saveButton" *ngIf="materiaSelecionada&&professorSelecionado&&numeroSalaSelecionada&&diasSelecionados">SALVAR</button>
+<button (click)="saveDate()" class="saveButton" *ngIf="materiaSelecionada&&professorSelecionado&&numeroSalaSelecionada">SALVAR</button>
