--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -12,8 +12,12 @@
       <span>Instituição</span>
     </button>
     <button mat-menu-item disabled>
+      <mat-icon>how_to_reg</mat-icon>
+      <span>Cadastrar Alunos</span>
+    </button>
+    <button mat-menu-item disabled>
       <mat-icon>school</mat-icon>
-      <span>Professores</span>
+      <span>Cadastrar Salas</span>
     </button>
     <button (click)="redirectReserve()" mat-menu-item>
       <mat-icon>meeting_room</mat-icon>
