--- a/src/app/tela-perfil/tela-perfil.component.html
+++ b/src/app/tela-perfil/tela-perfil.component.html
@@ -12,7 +12,7 @@
         <mat-icon matSuffix>remember_me</mat-icon>
       </mat-form-field>
       <mat-form-field class="nome" appearance="fill">
-        <mat-label>Identificação:</mat-label>
+        <mat-label>Email:</mat-label>
         <input formControlName="email" type="email" [value]="email" matInput />
         <mat-icon matSuffix>email</mat-icon>
       </mat-form-field>
