--- a/src/app/role-adm/tela-edit-teacher/tela-edit-teacher.component.html
+++ b/src/app/role-adm/tela-edit-teacher/tela-edit-teacher.component.html
@@ -21,7 +21,7 @@
           mat-raised-button
           color="secondary"
         >
-          Cadastrar
+          Editar
         </button>
       </div>
     </form>
