--- a/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
+++ b/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
@@ -1,32 +1,28 @@
 <mat-toolbar>
-    <button mat-icon-button (click)="openHome()">
-      <mat-icon style="float: right;">home</mat-icon>
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="openLoginSignUp()" mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>Cadastro/Login</span>
     </button>
-    
-    <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>Mapa do Site</span>
     </button>
-    <mat-menu #menu="matMenu">
-      <button (click)="openLoginSignUp()" mat-menu-item>
-        <mat-icon>dialpad</mat-icon>
-        <span>Cadastro/Login</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>voicemail</mat-icon>
-        <span>Mapa do Site</span>
-      </button>
-      <button mat-menu-item disabled>
-        <mat-icon>notifications_off</mat-icon>
-        <span>Sobre</span>
-      </button>
-      <button (click)="openReservas()" mat-menu-item>
-        <mat-icon>event</mat-icon>
-        <span>Reservas</span>
-      </button>
-    </mat-menu>
-  
-    <span class="tituloH">HEIMDALL</span>
-  
+    <button (click)="openSalas()" mat-menu-item>
+      <mat-icon>meeting_room</mat-icon>
+      <span>Salas</span>
+    </button>
+    <button (click)="openReservas()" mat-menu-item>
+      <mat-icon>event</mat-icon>
+      <span>Reservas</span>
+    </button>
+  </mat-menu>
+
+  <span class="tituloH">HEIMDALL</span>
+
 </mat-toolbar>
 
 <h1>DELETAR RESERVA DE SALAS</h1>
