--- a/src/app/tela-inicial/tela-inicial.component.html
+++ b/src/app/tela-inicial/tela-inicial.component.html
@@ -11,9 +11,9 @@
       <mat-icon>voicemail</mat-icon>
       <span>Mapa do Site</span>
     </button>
-    <button mat-menu-item disabled>
-      <mat-icon>notifications_off</mat-icon>
-      <span>Sobre</span>
+    <button (click)="openSalas()" mat-menu-item>
+      <mat-icon>meeting_room</mat-icon>
+      <span>Salas</span>
     </button>
     <button (click)="openReservas()" mat-menu-item>
       <mat-icon>event</mat-icon>
