--- a/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
+++ b/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
@@ -1,1 +1,112 @@
-<p>tela-deletar-salas works!</p>
+<mat-toolbar>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button (click)="openLoginSignUp()" mat-menu-item>
+        <mat-icon>dialpad</mat-icon>
+        <span>Cadastro/Login</span>
+      </button>
+      <button mat-menu-item disabled>
+        <mat-icon>voicemail</mat-icon>
+        <span>Mapa do Site</span>
+      </button>
+      <button (click)="openSalas()" mat-menu-item>
+        <mat-icon>meeting_room</mat-icon>
+        <span>Salas</span>
+      </button>
+      <button (click)="openReservas()" mat-menu-item>
+        <mat-icon>event</mat-icon>
+        <span>Reservas</span>
+      </button>
+    </mat-menu>
+  
+    <span class="tituloH">HEIMDALL</span>
+  
+  </mat-toolbar>
+  
+  <h1>DELETAR CADASTRO DE SALAS</h1>
+  
+  <h3 style="color: red; text-align: center;">Toda remoção será permanente!</h3>
+  
+  <div class="insertData">
+  
+    <h5>Escolha a sala que possui uma reserva que deseja deletar:</h5>
+    <mat-form-field class="boxSize">
+      <mat-label>Sala:</mat-label>
+      <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
+        <mat-option *ngFor="let numero of numeroSala" [value]="numero">{{ numero }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  
+    
+    <div class="table-container" *ngIf="salasAchadas.length">
+    
+      <mat-table [dataSource]="salasAchadas" matSort>
+  
+        <ng-container matColumnDef="selecionar">
+          <mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+            </mat-checkbox>
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)">
+            </mat-checkbox>
+          </mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="numero">
+          <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.number }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="cadeiras">
+          <mat-header-cell *matHeaderCellDef>Qte. de cadeiras</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.cadeiras }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="mesas">
+          <mat-header-cell *matHeaderCellDef>Qte. de mesas</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.mesas }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="cadeirasPorMesa">
+          <mat-header-cell *matHeaderCellDef>Qte. de cadeiras por mesas</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.cadeirasPorMesa }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="computadores">
+          <mat-header-cell *matHeaderCellDef>Qte. de computadores</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.computadores }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="lousa">
+          <mat-header-cell *matHeaderCellDef>Qte. de lousas</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.lousa }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="projetor">
+          <mat-header-cell *matHeaderCellDef>Qte de projetores</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.projetor }}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="status">
+          <mat-header-cell *matHeaderCellDef>Sala esta utilizavel?</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.status }}</mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="remove">
+          <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
+          <mat-cell *matCellDef="let sala">
+            <button mat-icon-button (click)="removeRow(sala)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </mat-cell>
+        </ng-container>
+    
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+    </div>
+  
+   <br>
+    <button (click)="deleteReserva()" class="deleteButton">Delete</button>
+  </div>
