--- a/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
+++ b/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
@@ -31,7 +31,7 @@
   
   <div class="insertData">
   
-    <h5>Escolha a sala que possui uma reserva que deseja deletar:</h5>
+    <h5>Escolha a sala que deseja deletar:</h5>
     <mat-form-field class="boxSize">
       <mat-label>Sala:</mat-label>
       <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
