--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
@@ -1,1 +1,94 @@
-<p>tela-salas-feitas works!</p>
+<mat-toolbar>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button (click)="openLoginSignUp()" mat-menu-item>
+        <mat-icon>dialpad</mat-icon>
+        <span>Cadastro/Login</span>
+      </button>
+      <button mat-menu-item disabled>
+        <mat-icon>voicemail</mat-icon>
+        <span>Mapa do Site</span>
+      </button>
+      <button (click)="openSalas()" mat-menu-item>
+        <mat-icon>meeting_room</mat-icon>
+        <span>Salas</span>
+      </button>
+      <button (click)="openReservas()" mat-menu-item>
+        <mat-icon>event</mat-icon>
+        <span>Reservas</span>
+      </button>
+    </mat-menu>
+  
+    <span class="tituloH">HEIMDALL</span>
+  
+  </mat-toolbar>
+  
+  <div class="demo-button-container">
+    <button mat-raised-button (click)="addData()" class="demo-button">
+      CRIAR NOVAS SALAS
+    </button>
+    <button
+        mat-raised-button
+        [disabled]="!salas.length"
+        (click)="removeData()"
+        class="demo-button">
+      DELETAR SALAS
+    </button>
+  </div>
+  <div class="table-container">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. profess" #input>
+    </mat-form-field>
+  
+    <mat-table [dataSource]="dataSource">
+      
+        <ng-container matColumnDef="numero">
+            <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.number }}</mat-cell>
+          </ng-container>
+  
+          <ng-container matColumnDef="cadeiras">
+            <mat-header-cell *matHeaderCellDef>Qte. de cadeiras</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.cadeiras }}</mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="mesas">
+            <mat-header-cell *matHeaderCellDef>Qte. de mesas</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.mesas }}</mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="cadeirasPorMesa">
+            <mat-header-cell *matHeaderCellDef>Qte. de cadeiras por mesas</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.cadeirasPorMesa }}</mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="computadores">
+            <mat-header-cell *matHeaderCellDef>Qte. de computadores</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.computadores }}</mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="lousa">
+            <mat-header-cell *matHeaderCellDef>Qte. de lousas</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.lousa }}</mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="projetor">
+            <mat-header-cell *matHeaderCellDef>Qte de projetores</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.projetor }}</mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="status">
+            <mat-header-cell *matHeaderCellDef>Sala esta utilizavel?</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.status }}</mat-cell>
+          </ng-container>
+  
+      <ng-container matColumnDef="remove">
+        <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
+        <mat-cell *matCellDef="let sala">
+          <button mat-icon-button (click)="removeRow(sala)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+  
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </div>
