--- a/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
+++ b/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
@@ -1,1 +1,26 @@
-<p>tela-novas-salas works!</p>
+<mat-toolbar>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button (click)="openLoginSignUp()" mat-menu-item>
+        <mat-icon>dialpad</mat-icon>
+        <span>Cadastro/Login</span>
+      </button>
+      <button mat-menu-item disabled>
+        <mat-icon>voicemail</mat-icon>
+        <span>Mapa do Site</span>
+      </button>
+      <button (click)="openSalas()" mat-menu-item>
+        <mat-icon>meeting_room</mat-icon>
+        <span>Salas</span>
+      </button>
+      <button (click)="openReservas()" mat-menu-item>
+        <mat-icon>event</mat-icon>
+        <span>Reservas</span>
+      </button>
+    </mat-menu>
+  
+    <span class="tituloH">HEIMDALL</span>
+  
+  </mat-toolbar>
