--- a/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
+++ b/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
@@ -89,7 +89,7 @@
           <mat-cell *matCellDef="let sala">{{ sala.projetor }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="status">
-          <mat-header-cell *matHeaderCellDef>Sala esta utilizavel?</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef>Sala esta disponível?</mat-header-cell>
           <mat-cell *matCellDef="let sala">{{ sala.status }}</mat-cell>
         </ng-container>
         
