--- a/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
+++ b/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
@@ -63,30 +63,29 @@
           <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
           <mat-cell *matCellDef="let sala">{{ sala.number }}</mat-cell>
         </ng-container>
-
         <ng-container matColumnDef="cadeiras">
           <mat-header-cell *matHeaderCellDef>Qte. de cadeiras</mat-header-cell>
-          <mat-cell *matCellDef="let sala">{{ sala.cadeiras }}</mat-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.chairs }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="mesas">
           <mat-header-cell *matHeaderCellDef>Qte. de mesas</mat-header-cell>
-          <mat-cell *matCellDef="let sala">{{ sala.mesas }}</mat-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.tables }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="cadeirasPorMesa">
           <mat-header-cell *matHeaderCellDef>Qte. de cadeiras por mesas</mat-header-cell>
-          <mat-cell *matCellDef="let sala">{{ sala.cadeirasPorMesa }}</mat-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.chairByTables }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="computadores">
           <mat-header-cell *matHeaderCellDef>Qte. de computadores</mat-header-cell>
-          <mat-cell *matCellDef="let sala">{{ sala.computadores }}</mat-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.computers }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="lousa">
-          <mat-header-cell *matHeaderCellDef>Qte. de lousas</mat-header-cell>
-          <mat-cell *matCellDef="let sala">{{ sala.lousa }}</mat-cell>
+          <mat-header-cell *matHeaderCellDef>Capacidade da sala</mat-header-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.capacity }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="projetor">
           <mat-header-cell *matHeaderCellDef>Qte de projetores</mat-header-cell>
-          <mat-cell *matCellDef="let sala">{{ sala.projetor }}</mat-cell>
+          <mat-cell *matCellDef="let sala">{{ sala.projectors }}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="status">
           <mat-header-cell *matHeaderCellDef>Sala esta disponível?</mat-header-cell>
