--- a/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
+++ b/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
@@ -52,8 +52,8 @@
           <input matInput type="number" placeholder="Qte. de Computadores" [(ngModel)]="numeroComputadores" name="numeroComputadores">
         </mat-form-field>
         <mat-form-field>
-            <mat-label>Qte. de Lousas</mat-label>
-          <input matInput type="number" placeholder="Qte. de Lousas" [(ngModel)]="lousa" name="lousa">
+            <mat-label>Capacidade da sala</mat-label>
+          <input matInput type="number" placeholder="Capacidade da sala" [(ngModel)]="capacidade" name="Capacidade">
         </mat-form-field>
         <br>
         <mat-form-field>
