--- a/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
+++ b/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
@@ -79,6 +79,7 @@
   
     <mat-table [dataSource]="reservasAchadas" matSort>
 
+      <!-- Selecionar Column -->
       <ng-container matColumnDef="selecionar">
         <mat-header-cell *matHeaderCellDef>
           <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -93,27 +94,35 @@
           </mat-checkbox>
         </mat-cell>
       </ng-container>
-      
+    
+      <!-- Número Column -->
       <ng-container matColumnDef="numero">
         <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
-        <mat-cell *matCellDef="let sala">{{ salaName.number }}</mat-cell>
+        <mat-cell *matCellDef="let sala">
+          <span *ngIf="salaName">{{ salaName.number }}</span>
+          <span *ngIf="!salaName">N/A</span>
+        </mat-cell>
       </ng-container>
-  
+    
+      <!-- Professor Column -->
       <ng-container matColumnDef="professor">
         <mat-header-cell *matHeaderCellDef>Nome do Professor</mat-header-cell>
         <mat-cell *matCellDef="let sala">{{ sala.user_id }}</mat-cell>
       </ng-container>
-  
+    
+      <!-- Matéria Column -->
       <ng-container matColumnDef="materia">
         <mat-header-cell *matHeaderCellDef>Matéria</mat-header-cell>
         <mat-cell *matCellDef="let sala">{{ sala.class_id }}</mat-cell>
       </ng-container>
-  
+    
+      <!-- Dia Column -->
       <ng-container matColumnDef="dia">
         <mat-header-cell *matHeaderCellDef>Dia</mat-header-cell>
         <mat-cell *matCellDef="let sala">{{ sala.start_time | date:'medium' }}</mat-cell>
       </ng-container>
-  
+    
+      <!-- Remove Column -->
       <ng-container matColumnDef="remove">
         <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
         <mat-cell *matCellDef="let sala">
@@ -122,10 +131,11 @@
           </button>
         </mat-cell>
       </ng-container>
-  
+    
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
+    
   </div>
 
  <br>
