--- a/src/app/tela-salas/tela-salas.component.html
+++ b/src/app/tela-salas/tela-salas.component.html
@@ -1,6 +1,6 @@
 <div class="button-container">
     <div class="reservas-button">
-      <h1 style="color: red;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
+      <h1 style="color: yellow;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
       <button mat-raised-button (click)="addData()" class="demo-button">CRIAR NOVAS SALAS</button>
       <br>
       <button mat-raised-button (click)="removeData()" class="demo-button">DELETAR SALAS</button>
